src/components/Header/Header.css
.header {
  --primary-color: #1a1b22;
  --regular-bg-color: rgba(196, 196, 196, 0.01);
  --chosen-color: #fff;
  --chosen-bg-color: var(--regular-bg-color);

  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
  height: 56px;

  background-color: var(--chosen-bg-color);
  color: var(--chosen-color);
  box-shadow: inset 0px -1px 0px #d1d2d6;
}

.header_saved-news {
  --chosen-color: var(--primary-color);
  --regular-bg-color: #fff;
}

.header_expanded {
  position: relative;
  z-index: 0;
}

.header_expanded::after {
  content: '';
  display: block;
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: -1;
}

.header_state_expanded-main {
  --chosen-bg-color: var(--primary-color);
}

.header_state_expanded-saved-news {
  --chosen-bg-color: var(--regular-bg-color);
}

.header__primary-wrap {
  box-sizing: border-box;

  display: flex;
  justify-content: space-between;
  align-items: center;

  width: 100%;
  padding: 0 16px;

  background-color: var(--chosen-bg-color);
  box-shadow: inherit;
}

.header__app-name {
  font-family: 'Roboto Slab', serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
  text-decoration: none;
  color: var(--chosen-color);
}

.header__menu-btn {
  box-sizing: border-box;

  display: none;
  width: 24px;
  height: 24px;
  padding: 0;
  border: none;
  
  cursor: pointer;
  background-color: transparent;
}

.header__menu-btn_expand-btn {
  padding: 8px 4px;
}

.header__menu-btn_shown {
  display: inline-block;
}

.header__collapse-icon {
  fill: var(--chosen-color);
}

.header__hamburger-line {
  display: block;
  height: 0;
  border: 1px solid var(--chosen-color);
  margin-bottom: 4px;
}

.header__hamburger-line:last-of-type {
  margin: 0;
}

.header__nav {
  position: absolute;
  top: 100%;
  left: auto;

  display: none;
  width: 100%;
  padding: 16px 0 24px;

  background-color: var(--chosen-bg-color);
}

.header__nav_shown {
  display: flex;
  justify-content: center;
}

@media screen and (min-width: 768px) {
  .header {
    flex-wrap: nowrap;
    align-items: stretch;
    justify-content: space-between;

    padding: 0 40px;
    height: 66px;
    
    --chosen-bg-color: var(--regular-bg-color);
  }
  
  .header_expanded::after {
    visibility: hidden;
    opacity: 0;
  }

  .header__primary-wrap {
    width: auto;
    padding: 0;
  }

  .header__app-name {
    width: 200px;

    font-size: 20px;
    line-height: 1.2;
  }

  .header__menu-btn_shown {
    display: none;
  }

  .header__nav {
    position: static;
    width: auto;
    padding: 0;

    box-shadow: inherit;
  }
}

@media screen and (min-width: 1440px) {
  .header {
    padding: 0 104px;
    height: 80px;
  }
}

